-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17.0.10, 21, 22
-
Component/s: hotspot
-
b17
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8323381 | 21.0.3-oracle | Aleksey Shipilev | P3 | Resolved | Fixed | b01 |
| JDK-8320075 | 21.0.2 | Aleksey Shipilev | P3 | Resolved | Fixed | b08 |
| JDK-8321924 | 17.0.11-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8322709 | 17.0.11 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
# assert(is_dominator(c, n_ctrl)) failed: control input must dominate current control
with attached test case run with:
java -XX:-TieredCompilation -XX:-BackgroundCompilation -XX:-UseOnStackReplacement -XX:CompileOnly=TestBadControlAfterPreMainPost::test -XX:-UseLoopPredicate -XX:-DoEscapeAnalysis TestBadControlAfterPreMainPost
Assert comes from code added by
- backported by
-
JDK-8320075 C2: "control input must dominate current control" assert failure
-
- Resolved
-
-
JDK-8321924 C2: "control input must dominate current control" assert failure
-
- Resolved
-
-
JDK-8322709 C2: "control input must dominate current control" assert failure
-
- Resolved
-
-
JDK-8323381 C2: "control input must dominate current control" assert failure
-
- Resolved
-
- relates to
-
JDK-8314024 SIGSEGV in PhaseIdealLoop::build_loop_late_post_work due to bad immediate dominator info
-
- Closed
-
- links to
-
Commit
openjdk/jdk17u-dev/a60492ec
-
Commit
openjdk/jdk21u/cd4ce011
-
Commit
openjdk/jdk/4e1e579e
-
Review
openjdk/jdk17u-dev/2070
-
Review
openjdk/jdk21u/324
-
Review
openjdk/jdk/15720