8315920: C2: "control input must dominate current control" assert failure

Reviewed-by: roland
Backport-of: 4e1e579e8b916191397fc958df32ac3f6003c791